
	* src/dirlist.cc:
	* src/gnome-cmd-con.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-delete-dialog.cc:
	* src/gnome-cmd-file-props-dialog.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-search-dialog.cc:
	* src/gnome-cmd-xfer.cc:
	GnomeCmdData: gnome_cmd_data_get_gui_update_rate() -> gnome_cmd_data.gui_update_rate

2008-09-11  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-main-menu.cc:
	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-options-dialog.cc:
	* src/gnome-cmd-search-dialog.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/main.cc:
	GnomeCmdData: more C++ rework

2008-09-10  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.h:
	file_is_wanted(GnomeVFSFileInfo *finfo) -> GnomeCmdFileList::file_is_wanted(GnomeCmdFile *f)

2008-09-09  Piotr Eljasiak  <epiotr@use.pl>

	* /gnome-cmd-file-list.cc:
	* /gnome-cmd-file-list.h:
	* /gnome-cmd-file-selector.cc:
	* /gnome-cmd-search-dialog.cc:
	gnome_cmd_file_list_update_style(GnomeCmdFileList*) -> GnomeCmdFileList::update_style()

2008-09-08  Piotr Eljasiak  <epiotr@use.pl>

	* /gnome-cmd-advrename-dialog.cc:
	* /gnome-cmd-data.cc:
	* /gnome-cmd-data.h:
	* /gnome-cmd-file-list.cc:
	* /gnome-cmd-file-selector.cc:
	* /gnome-cmd-main-menu.cc:
	* /gnome-cmd-main-win.cc:
	* /gnome-cmd-options-dialog.cc:
	* /gnome-cmd-patternsel-dialog.cc:
	* /gnome-cmd-search-dialog.cc:
	* /gnome-cmd-user-actions.cc:
	GnomeCmdData: more C++ rework

	* src/imageloader.h:
	Removal of root-dir icon - removed forgotten enum

	* src/gnome-cmd-main-win.cc:
	Fix for 'equal pane size' in horizontal mode

2008-09-07  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-delete-dialog.cc
	* src/gnome-cmd-options-dialog.cc:
	* src/gnome-cmd-prepare-copy-dialog.cc: